src/test/ui/uninhabited/privately-uninhabited-mir-call.stderr
error[E0381]: used binding `y` isn't initialized
  --> $DIR/privately-uninhabited-mir-call.rs:28:5
   |
LL |     let y: &mut u32;
   |         - binding declared here but left uninitialized
...
LL |     *y = 2;
   |     ^^^^^^ `y` used here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
